@@ -1771,7 +1771,7 @@ ipmi_lan_check_net_fn (fiid_template_t tmpl_msg_hdr,
 
   FIID_OBJ_GET(obj_msg_hdr, tmpl_msg_hdr, (uint8_t *)"net_fn", &net_fn_recv);
 
-  return ((((int8_t)net_fn_recv) == net_fn) ? 1 : 0);
+  return ((((uint8_t)net_fn_recv) == net_fn) ? 1 : 0);
 }
 
 int8_t 
