@@ -1,3 +1,14 @@
+2006-01-28  Albert Chu  <chu11@llnl.gov>
+
+	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_check_net_fn),
+	libfreeipmi/src/ipmi-msg-support-cmds.c (ipmi_check_cmd,
+	ipmi_check_comp_code): Fix typecast typos.
+
+	* libfreeipmi/src/ipmi-interface.c (ipmi_outofband_free,
+	ipmi_inband_free, ipmi_open_outofband): Fix corner cases.
+
+	* ipmiping/src/ipmiping.c (parsepacket): Remove unnecessary code.
+	
 2006-01-26  A Balamurugan  <bala@zresearch.com>
 
 	* libfreeipmi/src/ipmi-interface.c (ipmi_cmd_raw): fixed improper
